<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="true"
    android:padding="3px"
    style="@style/AppTheme"
    android:background="@drawable/abc_ab_stacked_solid_light_holo">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/hop_spinner"
            android:spinnerMode="dialog"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/hop_weight_picker"
            android:inputType="numberDecimal"
            android:layout_weight="1"
            />
        <Spinner
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:id="@+id/hop_unit_spinner"
            android:spinnerMode="dialog"
            android:layout_weight="1"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/hop_addition_label"
            android:text="@string/addition_label"
            android:layout_weight="1"
        />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/hop_time_picker"
            android:inputType="numberDecimal"
            android:layout_weight="1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/hop_alpha_label"
            android:text="@string/alpha_label"
            android:layout_weight="1"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/hop_alpha_picker"
            android:inputType="numberDecimal"
            android:layout_weight="1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/current_ibu_label"
            android:text="@string/current_ibu_label"
            android:layout_weight="1"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/current_ibu"
            android:layout_weight="1"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hop_save"
            android:id="@+id/hop_ok_button" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hop_delete"
            android:id="@+id/hop_delete_button" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/hop_id"
            android:text=""
            android:visibility="gone"
            android:layout_weight="1"
            />
    </LinearLayout>

</LinearLayout>